consolidated the css, changed html class tags and updated the readme

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <title>website</title>
 </head>
 
 <body>
     <!-- Navbar Section  -->
     <nav class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1>Luke<span class="seo">seo</span>n</h1>
         <div>
             <ul>
                 <li>
@@ -31,7 +31,7 @@
 
     <!-- Main Content Section  -->
     <section class="content">
-        <article id="search-engine-optimization" class="search-engine-optimization">
+        <article id="search-engine-optimization" class="content-1">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
                 alt="Computer with a notebook and a cup of coffee" />
             <h2>Search Engine Optimization</h2>
@@ -41,7 +41,7 @@
                 your visibility and find the right customers for your business.
             </p>
         </article>
-        <article id="online-reputation-management" class="online-reputation-management">
+        <article id="online-reputation-management" class="content-1">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right"
                 alt="Man holding phone while on laptop" />
             <h2>Online Reputation Management</h2>
@@ -51,7 +51,7 @@
                 you the control over what potential customers see when they search for your business.
             </p>
         </article>
-        <article id="social-media-marketing" class="social-media-marketing">
+        <article id="social-media-marketing" class="content-1">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="A group meeting" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -64,7 +64,7 @@
 
     <!-- Aside Section -->
     <aside class="benefits">
-        <div class="benefit-lead">
+        <div class="benefits-1">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Lead generation image" />
             <p>
@@ -72,7 +72,7 @@
                 to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefits-1">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Light bulb head" />
             <p>
@@ -80,7 +80,7 @@
                 for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefits-1">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Currency" />
             <p>
