fixed page title, further consolidated css file, fixed tags in the html file, and fixed selectors in the css file. And added comments in both files

--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon</title>
 </head>
 
 <body>
-    <!-- Navbar Section  -->
-    <nav class="header">
-        <h1>Luke<span class="seo">seo</span>n</h1>
-        <div>
+    
+    <!-- Header section  -->
+
+    <header class="header">
+        <h1>Hori<span class="seo">seo</span>n</h1>
+
+        <!-- Navbar Section  -->
+
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -23,15 +28,17 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </nav>
+        </nav>
+    </header>
 
     <!-- Hero Section  -->
+
     <div class="hero"></div>
 
     <!-- Main Content Section  -->
-    <section class="content">
-        <article id="search-engine-optimization" class="content-1">
+
+    <section class="content-section">
+        <article id="search-engine-optimization" class="content">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
                 alt="Computer with a notebook and a cup of coffee" />
             <h2>Search Engine Optimization</h2>
@@ -41,7 +48,7 @@
                 your visibility and find the right customers for your business.
             </p>
         </article>
-        <article id="online-reputation-management" class="content-1">
+        <article id="online-reputation-management" class="content">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right"
                 alt="Man holding phone while on laptop" />
             <h2>Online Reputation Management</h2>
@@ -51,7 +58,7 @@
                 you the control over what potential customers see when they search for your business.
             </p>
         </article>
-        <article id="social-media-marketing" class="content-1">
+        <article id="social-media-marketing" class="content">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="A group meeting" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -63,8 +70,9 @@
     </section>
 
     <!-- Aside Section -->
-    <aside class="benefits">
-        <div class="benefits-1">
+
+    <aside>
+        <div class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Lead generation image" />
             <p>
@@ -72,7 +80,7 @@
                 to your website.
             </p>
         </div>
-        <div class="benefits-1">
+        <div class="benefit">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Light bulb head" />
             <p>
@@ -80,7 +88,7 @@
                 for your business.
             </p>
         </div>
-        <div class="benefits-1">
+        <div class="benefit">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Currency" />
             <p>
@@ -91,6 +99,7 @@
     </aside>
 
     <!-- Footer Section -->
+    
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
